--- a/jmazaWeatherApp/package.json
+++ b/jmazaWeatherApp/package.json
@@ -8,7 +8,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "cypress:open": "cypress open --e2e --browser chrome"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +36,7 @@
     "@angular/compiler-cli": "16.2.5",
     "@types/jasmine": "~4.3.6",
     "@types/node": "^20.8.0",
+    "cypress": "^13.2.0",
     "blue-harvest": "^0.3.1",
     "jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
@@ -47,7 +48,6 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "protractor": "7.0.0",
     "ts-node": "10.9.1",
     "tslint": "~6.1.3",
     "typescript": "5.1.6"
