--- a/jmazaWeatherApp/package.json
+++ b/jmazaWeatherApp/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration=production",
     "test": "ng test",
     "lint": "ng lint",
     "cypress:open": "cypress open --e2e --browser chrome"
